; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wan/extr_slic_ds26522.c_slic_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wan/extr_slic_ds26522.c_slic_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }

@SLIC_THREE_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spi_device*, i32, i64)* @slic_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @slic_write(%struct.spi_device* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.spi_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca [3 x i64], align 16
  store %struct.spi_device* %0, %struct.spi_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @bitrev16(i32 %8)
  %10 = ashr i32 %9, 1
  store i32 %10, i32* %5, align 4
  %11 = load i64, i64* %6, align 8
  %12 = call i64 @bitrev8(i64 %11)
  store i64 %12, i64* %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = ashr i32 %13, 8
  %15 = and i32 %14, 127
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds [3 x i64], [3 x i64]* %7, i64 0, i64 0
  store i64 %16, i64* %17, align 16
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 254
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds [3 x i64], [3 x i64]* %7, i64 0, i64 1
  store i64 %20, i64* %21, align 8
  %22 = load i64, i64* %6, align 8
  %23 = getelementptr inbounds [3 x i64], [3 x i64]* %7, i64 0, i64 2
  store i64 %22, i64* %23, align 16
  %24 = load %struct.spi_device*, %struct.spi_device** %4, align 8
  %25 = getelementptr inbounds [3 x i64], [3 x i64]* %7, i64 0, i64 0
  %26 = load i32, i32* @SLIC_THREE_LEN, align 4
  %27 = call i32 @spi_write(%struct.spi_device* %24, i64* %25, i32 %26)
  ret void
}

declare dso_local i32 @bitrev16(i32) #1

declare dso_local i64 @bitrev8(i64) #1

declare dso_local i32 @spi_write(%struct.spi_device*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
